[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprite/player.png" type="Texture" id=1]
[ext_resource path="res://sprite/ball.png" type="Texture" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://scripts/ball.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.2379, 10.6262 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.6305, 10 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=4]
radius = 11.5202

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.54309, 307.842 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 313.04, 1.96076 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9.1358, 313.575 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7.20374, 305.512 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 305.544, 9.01122 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1102.41, 10 )

[node name="Node2D" type="Node2D"]

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 300, 550 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="player"]
texture = ExtResource( 1 )

[node name="collisionPlayer" type="CollisionShape2D" parent="player"]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="Area2DPlayer" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2DPlayer"]
shape = SubResource( 2 )

[node name="ball" type="RigidBody2D" parent="."]
modulate = Color( 0.914063, 0.0714111, 0.0714111, 1 )
position = Vector2( 306.1, 498.916 )
mode = 2
physics_material_override = SubResource( 3 )
gravity_scale = 0.0
linear_velocity = Vector2( -200, 200 )
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="ball"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="collisionBall" type="CollisionShape2D" parent="ball"]
shape = SubResource( 4 )

[node name="wallRight" type="StaticBody2D" parent="."]
position = Vector2( 600, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallRight"]
shape = SubResource( 5 )

[node name="wallRightLLeft" type="StaticBody2D" parent="."]
position = Vector2( 0, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallRightLLeft"]
shape = SubResource( 5 )

[node name="StaticBodyUp" type="StaticBody2D" parent="."]
position = Vector2( 300, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodyUp"]
shape = SubResource( 6 )

[node name="Area2DRigt" type="Area2D" parent="."]
position = Vector2( 602.24, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRigt"]
position = Vector2( 0, 300 )
shape = SubResource( 7 )

[node name="Area2D2Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2Left"]
position = Vector2( 0, 300 )
shape = SubResource( 8 )

[node name="Area2D3Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3Up"]
position = Vector2( 300, 0 )
shape = SubResource( 9 )

[node name="Area2DAway" type="Area2D" parent="."]
position = Vector2( 306.751, 707.978 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DAway"]
shape = SubResource( 10 )
[connection signal="body_entered" from="player/Area2DPlayer" to="ball" method="_on_Area2DPlayer_body_entered"]
[connection signal="body_entered" from="Area2DRigt" to="ball" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2Left" to="ball" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3Up" to="ball" method="_on_Area2D3Up_body_entered"]
[connection signal="body_entered" from="Area2DAway" to="ball" method="_on_Area2DAway_body_entered"]
